--- a/Default/ReText.conf
+++ b/Default/ReText.conf
@@ -5,13 +5,14 @@ infoArea=#AAAAFF55
 lineNumberArea=cyan
 lineNumberAreaText=darkCyan
 
-htmlTags=darkMagenta
-htmlSymbols=darkCyan
-htmlStrings=darkYellow
-htmlComments=gray
 codeSpans=#505050
 markdownLinks=#000090
-blockquotes=darkGray
-restDirectives=darkMagenta
-restRoles=darkRed
+htmlTags=#800080
+htmlSymbols=#008080
+htmlStrings=#808000
+htmlComments=#a0a0a4
+blockquotes=#808080
+
+restDirectives=#800080
+restRoles=#800000
 whitespaceOnEnd=#80E1E1A5
